# PIGA-Linux

./: .gitignore  TODO  gentoo_projet.xml
linux-2.6.39-hardened-r8/: Makefile
linux-2.6.39-hardened-r8/arch/x86/: Kconfig
linux-2.6.39-hardened-r8/arch/x86/include/asm/: unistd_64.h
linux-2.6.39-hardened-r8/arch/x86/mm/: fault.c
linux-2.6.39-hardened-r8/fs/: exec.c
linux-2.6.39-hardened-r8/grsecurity/: Kconfig  Makefile
linux-2.6.39-hardened-r8/include/linux/: syscalls.h
linux-2.6.39-hardened-r8/scripts/: Makefile.build
linux-2.6.39-hardened-r8/security/: Kconfig
linux-2.6.39-hardened-r8/security/selinux/: Kconfig  Makefile  avc.c  hooks.c  selinuxfs.c
linux-2.6.39-hardened-r8/security/selinux/piga/: Kconfig  Makefile  piga.c  pigafs.c  procfs.c  syscalls.c
linux-2.6.39-hardened-r8/security/selinux/piga/include/: piga.h  procfs.h
pol/: result2_500  result2_5000  selpol.pol  shadow_test.pol  testpol.pol  tmppol.pol
ppp/: CMakeLists.txt  Makefile  README  localtime_to_tmp.sh  main.cpp  piga.c  piga.h  ppp.cpp  ppp.h  ppp.l  ppp.y  test.sh  test1.sh
presentation_albl/: Makefile  Plan_présentation.txt  soutenance.aux  soutenance.nav  soutenance.out  soutenance.tex  soutenance.tex.backup  soutenance.tex~  soutenance.toc
rapport/: .gitignore  Makefile  biblio.bib  document.tex  document_tmp.tex  problem1.dia  soutenance.tex
rapport/images/: modele_generale.dia  modele_generale_en.dia
rapport/old_rapport/: rapport.tex
script/: ftrace.sh  suspend.sh  trace-me.sh
test/: Makefile  main.cpp
