PROJECT(ppp)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)
SET(CMAKE_PROJECT_NAME "PIGA Policy Parser")

INCLUDE(CheckIncludeFile)
INCLUDE(CheckLibraryExists)
INCLUDE(CheckFunctionExists)
INCLUDE(FindPkgConfig)
INCLUDE(FeatureSummary)

PKG_SEARCH_MODULE(selinux libselinux)

INCLUDE_DIRECTORIES(${selinux_INCLUDE_DIRS})
LINK_DIRECTORIES(${selinux_LIBRARY_DIRS})

IF(NOT CMAKE_BUILD_TYPE)
	SET(CMAKE_BUILD_TYPE "Release")
ENDIF(NOT CMAKE_BUILD_TYPE)

IF(NOT DEBUG)
	ADD_DEFINITIONS(-DNDEBUG -O2)
ELSE(NOT DEBUG)
	ADD_DEFINITIONS(-g -DDEBUG)
ENDIF(NOT DEBUG)

SET(ppp_source
		"main.cpp"
		"ppp.cpp"
)

ADD_EXECUTABLE(ppp ${ppp_source})
TARGET_LINK_LIBRARIES(ppp ${selinux_LIBRARIES})
